fixed accordion width on mobile

--- a/css/accordian.css
+++ b/css/accordian.css
@@ -1,14 +1,14 @@
-body{
+body {
   background-color: #567;
   padding: 0 10px;
 }
-.accordion-container{
+.accordion-container {
   position: relative;
   max-width: 700px;
   height: auto;
   margin: 10px auto;
 }
-.accordion-container > h2{
+.accordion-container > h2 {
   text-align: center;
   color: #fff;
   padding-bottom: 5px;
@@ -16,47 +16,47 @@ body{
   padding-bottom: 15px;
   border-bottom: 1px solid #ddd;
 }
-.set{
+.set {
   position: relative;
   width: 100%;
   height: auto;
   background-color: #f5f5f5;
 }
-.set > a{
+.set > a {
   display: block;
   padding: 10px 15px;
   text-decoration: none;
   color: #555;
   font-weight: 600;
   border-bottom: 1px solid #ddd;
-  -webkit-transition:all 0.2s linear;
-  -moz-transition:all 0.2s linear;
-  transition:all 0.2s linear;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
-.set > a i{
+.set > a i {
   float: right;
   margin-top: 2px;
 }
-.set > a.active{
-  background-color:#3399cc;
+.set > a.active {
+  background-color: #3399cc;
   color: #fff;
 }
-.content{
+.content {
   background-color: #fff;
   border-bottom: 1px solid #ddd;
-  display:none;
+  display: none;
 }
-.content p{
+.content p {
   padding: 10px 15px;
   margin: 0;
   color: #333;
 }
 
-@media (max-width:1024px){
-	.accordion-container{
-  position: relative;
-  max-width: 300px;
-  height: auto;
-  margin: 10px auto;
+@media (max-width: 1024px) {
+  .accordion-container {
+    position: relative;
+    width: 90%;
+    height: auto;
+    margin: 10px auto;
+  }
 }
-	
